project2_test/test/test_11811620_2.out
Error type 8 at Line 7: incompatiable return type
Error type -1 at Line 10: undefined struct type // type -1?
Error type 4 at Line 10: redefine function: func1
// redefined variable in line 10, line 28
// undefined variable in line 15, line 20, line 29, line 30
// undefined function in line 19, line 29
// missing return in func4?